# rusttest

./: .gitignore  Cargo.toml  README.md  build.rs  memory.x  rp2040.x  test_rust.uf2
.cargo/: config.toml
src/: main.rs
