[package]
name = "test_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
embedded-hal = "1.0.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.12.0"

[target.thumbv6m-none-eabi.dependencies]
rp2040-boot2 = "0.3"
rp2040-hal = { version = "0.12", features = ["rt", "critical-section-impl"] }


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "test_rust"
test = false
bench = false
