[package]
edition = "2024"
name = "test_rust"
version = "0.1.0"

[dependencies]
embassy-executor = { version = "0.9.0",features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
defmt-rtt = "1.0.0"
cortex-m-rt = "0.7.5"
cortex-m = "0.7.7"

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true

[package.metadata.embassy]
build = [
  { target = "thumbv6m-none-eabi", artifact-dir = "out/rp" }
]

[[bin]]
name = "test_rust"
test = false
bench = false
